[gd_scene load_steps=2 format=3 uid="uid://d0276ffrgsjd3"]

[ext_resource type="Script" path="res://scripts/join_screen.gd" id="1_h3pje"]

[node name="JoinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h3pje")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -20.0
offset_right = 88.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Shields Up Engineering"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Game Room: "

[node name="GameRoom" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "enter game room"

[node name="Player" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Player1"
popup/item_1/text = "Player2"
popup/item_1/id = 1

[node name="Join" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
